--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -529,10 +529,10 @@ p:last-child {
 
 .hero-image {
     position: absolute;
-    top: -10%;
+    top: -20%;
     left: 0;
     width: 100%;
-    height: 120%;
+    height: 140%;
     object-fit: cover;
     object-position: center 20%;
     will-change: transform;
@@ -744,12 +744,15 @@ p:last-child {
 .prestation-image-wrapper {
     position: relative;
     overflow: hidden;
+    aspect-ratio: 4/3;
 }
 
 .prestation-image {
+    position: absolute;
+    top: -20%;
+    left: 0;
     width: 100%;
-    height: 100%;
-    aspect-ratio: 4/3;
+    height: 140%;
     object-fit: cover;
     will-change: transform;
 }
@@ -979,10 +982,16 @@ p:last-child {
 .apropos-image-wrapper {
     position: relative;
     overflow: hidden;
+    aspect-ratio: 3/4;
 }
 
 .apropos-image {
+    position: absolute;
+    top: -20%;
+    left: 0;
     width: 100%;
+    height: 140%;
+    object-fit: cover;
     will-change: transform;
 }
 
