--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -450,6 +450,10 @@ p:last-child {
     transition: transform var(--transition-base), opacity var(--transition-base);
 }
 
+.menu-toggle.active .menu-bar {
+    background-color: var(--gris-chaud);
+}
+
 .menu-toggle.active .menu-bar:nth-child(1) {
     transform: translateY(8px) rotate(45deg);
 }
